plz/minikube/test.yaml
# PostgreSQL: the database persistence layer where metadata is stored
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app.kubernetes.io/component: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/component: nginx
    spec:
      containers:
        - name: nginx
          image: "coisinha:latest"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: vol
              mountPath: /var/lib/postgresql/data
      volumes:
      - name: vol
        hostPath:
          path: /home/levi_leal/workspace/lime-energy/direct-intel-infra/.local/data
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app.kubernetes.io/component: nginx
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: postgres
  selector:
    app.kubernetes.io/component: nginx
